# PreLegal

./: .env.example  .gitignore  LICENSE  README.md  catalog.json  docker-compose.yml
backend/: Dockerfile  README.md  pyproject.toml
backend/app/: __init__.py  config.py  database.py  documents.py  llm.py  main.py  models.py  schemas.py  security.py
backend/app/routers/: auth.py  chat.py  documents.py  health.py  saved_documents.py
backend/tests/: conftest.py  test_auth.py  test_chat.py  test_documents.py  test_health.py  test_saved_documents.py
frontend/: .dockerignore  AGENTS.md  Dockerfile  README.md  next.config.ts  package-lock.json  package.json  vitest.config.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: AuthForm.test.tsx  AuthForm.tsx  AuthGate.tsx  DocumentChat.test.tsx  DocumentChat.tsx  DocumentDownloadButton.tsx  DocumentForm.tsx  DocumentGenerator.tsx  DocumentHistory.test.tsx  DocumentHistory.tsx  DocumentPdf.tsx  DocumentPreview.test.tsx  DocumentPreview.tsx  NdaDocument.tsx  NdaDownloadButton.tsx  NdaForm.test.tsx  NdaForm.tsx  NdaGenerator.test.tsx  NdaGenerator.tsx  NdaPreview.test.tsx  NdaPreview.tsx
frontend/src/lib/: nda.test.ts  nda.ts
scripts/: start-linux.sh  start-mac.sh  start-windows.ps1  stop-linux.sh  stop-mac.sh  stop-windows.ps1
templates/: LICENSE.txt
