[project]
name = "prelegal-backend"
version = "0.1.0"
description = "PreLegal V1 backend — FastAPI service with a temporary SQLite database."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.118",
    "uvicorn[standard]>=0.34",
    "sqlalchemy>=2.0.36",
    "pydantic[email]>=2.10",
    "pydantic-settings>=2.7",
    "itsdangerous>=2.2",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "httpx>=0.28",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]
